objects/New_Business__c.object
<CustomObject>
    <fields>
        <fullName>UHC_Subscribers__c</fullName>
        <label>UHC Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>United_TPA_Members__c</fullName>
        <label>United TPA Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>United_TPA_Subscribers__c</fullName>
        <label>United TPA Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Prospect Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Prospect Strategy Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Strategy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>